# MyPersonalPortfolio

./: .gitignore  README.md
portfolio-backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
portfolio-backend/app/: database.py  main.py
portfolio-backend/app/models/: __init__.py  certification.py  chat_history.py  contact_message.py  education.py  experience.py  profile.py  project.py  skill.py
portfolio-backend/app/routers/: chat.py  contact.py  portfolio.py
portfolio-backend/app/services/: rag_service.py
portfolio-frontend/: index.html  package-lock.json  package.json
portfolio-frontend/src/: App.jsx  index.css
portfolio-frontend/src/components/: About.jsx  Certifications.jsx  Chatbot.jsx  Contact.jsx  DarkModeBackground.jsx  Education.jsx  Experience.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  Projects.jsx  Skills.jsx  ThemeProvider.jsx
portfolio-frontend/src/components/ui/: MouseParticles.jsx  dot-pattern.jsx
portfolio-frontend/src/data/: portfolioData.js
